fix spacing:

--- a/css/style.css
+++ b/css/style.css
@@ -483,7 +483,7 @@ body.section-show .transition-mask:before{
 .front-person-img > img{
 	max-width:100%;
 	padding-top: 100px;
-	padding-right: 70px;
+	padding-right: 23%;
 	justify-content: center;
 	overflow:hidden;
 	vertical-align:bottom;
